overflow prblm solved

--- a/src/container/style/Main.scss
+++ b/src/container/style/Main.scss
@@ -11,6 +11,7 @@
     justify-content: center;
     align-items: center;
     position: relative;
+    overflow-x: hidden;
 }
 .fixed-main{
     position: absolute;
